[package]
name = "xifeng"
version = "0.0.1"
license = "MIT"
authors = ["3442853561<3442853561@qq.com>"]

description = "Xifeng is the crate for computer vision with Rust"
repository = "https://github.com/RustDream/Xifeng"

[lib]
name = "xifeng"
path = "./src/lib.rs"

[[bin]]
name = "document"
path = "./src/examples/document.rs"
